fixed css on forms, spacing and button

--- a/app/assets/stylesheets/static_pages.css
+++ b/app/assets/stylesheets/static_pages.css
@@ -24,7 +24,7 @@ html {
 .black-bottom-home {
 	position: relative;
 	width: 100%;
-	height: 24em;
+	height: 28em;
 	display: block;
 	background-color: black;
 	top: 14em;
