--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -48,19 +48,15 @@ form input[type=text] {
 	box-shadow: 10px 10px 5px #888888;
 }
 
-/* .sign-up-button {
- 	color: black;
- 	background-color: red;
-}
-*/
+
 .sign-up-form h1 {
 	position: relative;
-	left: 6em;
+	text-align: center;
 	color: rgba(255, 137, 49, 1);
 }
 
 .edit-form h1 {
-	left: 4em;
+	text-align: center;
 	color: rgba(255, 137, 49, 1);
 	position: relative;
 
